--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,14 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-
+    
+    - name: Prepare the environment
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential gcc make binutils flex bison libelf-dev ncurses-dev bc python3 gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi libssl-dev libfl-dev
+        sudo apt-get install -y curl git ftp lftp wget libarchive-tools ccache
+        sudo apt-get install -y zip unzip tar gzip bzip2 rar unrar
+        
     - name: Preparing Toolchain
       run: |
         cd ${GITHUB_WORKSPACE}
